tests/models/struct/unnamed/i8/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    i8
);
fn main() {}
