tests/models/struct/unnamed/i8/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    i8
);
fn main() {}
